Extract partials and put view things in the view

--- a/Resources/Private/Templates/Editor/Index.html
+++ b/Resources/Private/Templates/Editor/Index.html
@@ -8,7 +8,7 @@
 
 <h2>{title}</h2>
 
-<f:form name="{formName}" method="post" action="{formAction}">
+<f:form name="{formName}" method="post" action="{f:uri.page}">
     <script type="text/javascript">
     function click_update_button() {
       var btn = document.getElementsByName('{prefix_pi1}[action][update_form]')[0];
