--- a/Resources/Private/Templates/Navigation/Author.html
+++ b/Resources/Private/Templates/Navigation/Author.html
@@ -1,13 +1,19 @@
 <div class="tx_bib-navi_author">
-	<div class="tx_bib-navi_main_label">{label} <span class="tx_bib-navi_current">&nbsp;</span></div>
-	<div class="tx_bib-navi_author_letters">{letterSelection -> f:format.raw()}<span class="tx_bib-navi_current">&nbsp;</span></div>
-	<div class="tx_bib-float_clear"></div>
+    <div class="tx_bib-navi_main_label"><f:translate key="authorNav_label" extensionName="bib" /> <span class="tx_bib-navi_current">&nbsp;</span></div>
+    <div class="tx_bib-navi_author_letters">
+        <f:link.page additionalParams="{tx_bib_pi1: {author_letter: ''}}"><f:translate key="authorNav_all_letters" extensionName="bib" /></f:link.page> ::
+        <f:for each="{letterSelection}" as="letter">
+            <f:link.page additionalParams="{tx_bib_pi1: {author_letter: letter}}">{letter}</f:link.page>,
+        </f:for>
+        <span class="tx_bib-navi_current">&nbsp;</span></div>
+    <div class="tx_bib-float_clear"></div>
 </div>
 
 <div class="tx_bib-navi_extra_row">
-	<div class="tx_bib-navi_author_selection">{selection -> f:format.raw()}<span class="tx_bib-navi_current">&nbsp;</span></div>
-	<div class="tx_bib-navi_author_select">{surnameSelection -> f:format.raw()}
-		<div class="tx_bib-float_clear"></div>
-	</div>
-	<div class="tx_bib-float_clear"></div>
+    <div class="tx_bib-navi_author_selection">{selection -> f:format.raw()}<span
+            class="tx_bib-navi_current">&nbsp;</span></div>
+    <div class="tx_bib-navi_author_select">{surnameSelection -> f:format.raw()}
+        <div class="tx_bib-float_clear"></div>
+    </div>
+    <div class="tx_bib-float_clear"></div>
 </div>
