--- a/Resources/Private/Templates/Navigation/Page.html
+++ b/Resources/Private/Templates/Navigation/Page.html
@@ -1,5 +1,5 @@
 <div class="tx_bib-navi_page">
-	<div class="tx_bib-navi_main_label">{label} <span class="tx_bib-navi_current">&nbsp;</span></div>
+	<div class="tx_bib-navi_main_label"><f:translate key="pageNav_label" extensionName="bib" /> <span class="tx_bib-navi_current">&nbsp;</span></div>
 	<div class="tx_bib-navi_page_selection">{backward -> f:format.raw()} {selection -> f:format.raw()} {forward -> f:format.raw()}</div>
 	<div class="tx_bib-float_clear"></div>
 </div>
