--- a/Resources/Private/Templates/Navigation/Search.html
+++ b/Resources/Private/Templates/Navigation/Search.html
@@ -1,33 +1,43 @@
 <div class="tx_bib-navi_search">
-    <f:form name="tx_bib_pi1-search_form" method="post" action="{f:page.uri(additionalParams: {tx_bib_pi1: {search: ''}})}">
+    <f:form name="tx_bib_pi1-search_form" method="post"
+            action="{f:uri.page(additionalParams: {tx_bib_pi1: {search: ''}})}">
 
-    <div class="tx_bib-navi_main_label"><f:translate key="searchNav_label" extensionName="bib"/><span class="tx_bib-navi_current">&nbsp;</span></div>
-    {searchBar -> f:format.raw()}
+        <div class="tx_bib-navi_main_label">
+            <f:translate key="searchNav_label" extensionName="bib"/>
+            <span class="tx_bib-navi_current">&nbsp;</span></div>
 
+        <f:form.textfield size="24" maxlength="512" name="tx_bib_pi1[search][text]" value=""/>
 
-<f:form.button> <f:translate key="searchNav_extra" extensionName="bib" /></f:form.button>
-    <f:form.checkbox onchange="this.form.submit()" name="tx_bib_pi1[search][extra]" value="1" checked="{configuration.search_navi.extra}"/>
+        <f:form.submit value="{f:translate(key:'searchNav_search', extensionName: 'bib')}" name="tx_bib_pi1[action][search]"/>
+        <f:form.submit value="{f:translate(key:'searchNav_clear', extensionName: 'bib')}" name="tx_bib_pi1[action][clear_search]"/>
 
-    <div class="tx_bib-float_clear"></div>
+        <label class="tx_bib-navi_label" for="search-extra">
+            <f:translate key="searchNav_extra" extensionName="bib"/>
+        </label>
+        <f:form.checkbox additionalAttributes="{onchange: 'this.form.submit()'}" id="search-extra"
+                         name="tx_bib_pi1[search][extra]" value="1" class="tx_bib-check"
+                         checked="{configuration.search_navi.extra}"/>
 
-    <f:if condition="{advancedSearch}">
-        <div class="tx_bib-navi_extra_row">
-            <div class="tx_bib-navi_search_details">
-                {separatorSelection -> f:format.raw()}
-                {ruleSelection -> f:format.raw()}
+        <div class="tx_bib-float_clear"></div>
+
+        <f:if condition="{advancedSearch}">
+            <div class="tx_bib-navi_extra_row">
+                <div class="tx_bib-navi_search_details">
+                    {separatorSelection -> f:format.raw()}
+                    {ruleSelection -> f:format.raw()}
+                </div>
+                <div class="tx_bib-float_clear"></div>
             </div>
-            <div class="tx_bib-float_clear"></div>
-        </div>
-        <div class="tx_bib-navi_extra_row">
-            <div class="tx_bib-navi_search_details">
-                {abstractsButton -> f:format.raw()}
-                {fullTextButton -> f:format.raw()}
+            <div class="tx_bib-navi_extra_row">
+                <div class="tx_bib-navi_search_details">
+                    {abstractsButton -> f:format.raw()}
+                    {fullTextButton -> f:format.raw()}
+                </div>
+                <div class="tx_bib-float_clear"></div>
             </div>
-            <div class="tx_bib-float_clear"></div>
-        </div>
-    </f:if>
+        </f:if>
 
-        <f:form.hidden name="tx_bib_pi1[search]" value="1" />
+        <f:form.hidden name="tx_bib_pi1[search][extra]" value="1"/>
         <f:if condition="{configuration.search_navi.extra']">
             <f:form.hidden value="{configuration.search_navi.rule}" name="rule"/>
             <f:form.hidden value="{configuration.search_navi.abstracts}" name="abstracts"/>
