Work on importer functionality

--- a/Resources/Private/Partials/Editor/Buttons.html
+++ b/Resources/Private/Partials/Editor/Buttons.html
@@ -5,7 +5,7 @@
 <span class="tx_bib-box_left">
     {saveButton}
     {editButton}
-      <f:form.button class="tx_bib-editor_button"><a href=""><f:translate key="editor_btn_cancel" extensionName="bib" /></a></f:form.button>
+    <f:form.button class="tx_bib-editor_button"><f:link.page><f:translate key="editor_btn_cancel" extensionName="bib" /></f:link.page></f:form.button>
 
       <f:if condition="{mode} == 1">
           <f:form.button class="tx_bib-editor_button" onclick="window.open('/typo3conf/ext/bib/Resources/Public/Html/Syntax.html'); return false;">{f:translate(key:'editor_btn_syntax_help',extensionName:'bib')}</f:form.button>
