--- a/Resources/Private/Templates/Editor/AuthorsWidget.html
+++ b/Resources/Private/Templates/Editor/AuthorsWidget.html
@@ -52,7 +52,7 @@
 </f:if>
 <f:if condition="{mode} == 1">
     <div style="padding-top: 0.5ex; padding-bottom: 0.5ex;">
-        <f:form.submit name="tx_bib_pi1[action][mode_authors]" value="+" />
+        <f:form.submit name="tx_bib_pi1[action][more_authors]" value="+" />
         <f:form.submit name="tx_bib_pi1[action][less_authors]" value="-" />
     </div>
 </f:if>
