--- a/Resources/Private/Templates/Dialog/Index.html
+++ b/Resources/Private/Templates/Dialog/Index.html
@@ -3,4 +3,4 @@
 <f:flashMessages queueIdentifier="tx_bib" />
 
 
-<p><f:translate key="link_back_to_list" extensionName="bib"/></p>
+<p><f:link.page><f:translate key="link_back_to_list" extensionName="bib"/></f:link.page></p>
