--- a/Resources/Private/Templates/Navigation/Preference.html
+++ b/Resources/Private/Templates/Navigation/Preference.html
@@ -7,7 +7,8 @@
                 <f:translate key="prefNav_label" extensionName="bib"/>
                 <span class="tx_bib-navi_current">&nbsp;</span>
             </div>
-        </div>        <div class="tx_bib-navi_pref_bottom">
+        </div>
+        <div class="tx_bib-navi_pref_bottom">
 
             <span class="tx_bib-navi_widget">
                 <span class="tx_bib-navi_label"><label for=""><f:translate key="prefNav_ipp_sel" extensionName="bib" /></label>:</span>
@@ -27,6 +28,5 @@
             <f:form.submit class="tx_bib-button" name="tx_bib_pi1[action][eval_pref]" value="{f:translate(key:'button_go', extensionName:'bib')}" />
         </div>
         <div class="tx_bib-float_clear"></div>
-    </div>
     </form>
 </div>
